Completed Main Page

--- a/GIT Application/GIT Application.csproj
+++ b/GIT Application/GIT Application.csproj
@@ -14,6 +14,10 @@
 	<AvaloniaResource Include="Styles\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Assets\Git-logo.png" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.0.6" />
